# raylib-bindings

./: .gitignore  Cargo.toml  clone_raylib.sh
assets/: mandelbrot.glsl  raw_image.raw  sine.glsl
bindings-generator/: Cargo.toml
bindings-generator/parser/: rlgl_api.json
bindings-generator/src/: main.rs  parser.rs  structure.rs
examples/: 3d_shapes.rs  font.rs  font_size.rs  input.rs  lines.rs  material.rs  mesh_generation.rs  model.rs  rainbow.rs  subpixel.rs  text.rs  texture.rs  texture_update.rs  window.rs
src/: bin.rs  collisions.rs  core.rs  cstr.rs  cstr_macro.rs  ffi.rs  lib.rs  main.rs  math.rs  model.rs  prelude.rs  rlgl.rs  shapes.rs  text.rs  textures.rs
src/core/: automation.rs  cursor.rs  default_font.rs  default_font_data  draw.rs  input.rs  mod.rs  other.rs  shader.rs  vr.rs  window.rs
src/math/: camera.rs  color.rs  matrix.rs  mod.rs  quaternion.rs  rectangle.rs  vector2.rs  vector3.rs  vector4.rs
src/model/: material.rs  mesh.rs  mod.rs  model.rs  shapes.rs
src/text/: atlas.rs  bitmap.rs  cache.rs  font.rs  mod.rs
src/textures/: image.rs  mod.rs  render_texture.rs  texture.rs
