[package]
name = "raylib-bindings"
version = "0.2.1"
edition = "2021"
build = "build/main.rs"

[lib]
name = "raylib"
path = "src/lib.rs"

[dependencies]
bitflags = "2.4.2"
float-cmp = "0.9.0"
fontdue = "0.8.0"
half = "2.4.0"
hashbrown = "0.14.3"
va_list = "0.1.4"

[build-dependencies]
cmake = "0.1.50"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[features]
default = [
	"image_export", "image_generation", "image_manipulation",
	"png", "dds", "hdr", "jpg", "gif", "qoi",
	"obj", "mtl", "iqm", "gltf", "vox", "m3d",
	"wav", "ogg", "xm", "mod", "mp3", "qoa"
]

image_export = []
image_generation = []
image_manipulation = []
png = []
dds = []
hdr = []
pic = []
pnm = []
ktx = []
astc = []
bmp = []
tga = []
jpg = []
gif = []
qoi = []
psd = []
pkm = []
pvr = []
svg = []

obj = []
mtl = []
iqm = []
gltf = []
vox = []
m3d = []

wav = []
ogg = []
xm = []
mod = []
mp3 = []
qoa = []
flac = []
